Clean up and ran with notebook

--- a/ContextCountsMaster.ipynb
+++ b/ContextCountsMaster.ipynb
@@ -46,47 +46,29 @@
     "gdata = pd.read_csv('Normalized_'+OutputFile)\n",
     "gdata = gdata.sort_values('normalizedCounts', ascending = False)\n",
     "sns.set_theme(style = 'whitegrid')\n",
-    "sns.barplot(y ='sequenceContext', x = 'normalizedCounts', data = gdata,)"
+    "sns.barplot(y ='sequenceContext', x = 'normalizedCounts', data = gdata, color = 'red')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cam/.local/lib/python3.8/site-packages/scipy/stats/stats.py:1541: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=16\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import scipy\n",
-    "import statsmodels.api as sm\n",
     "OutputFile = 'AC>TT_Mutation_Context_Frequency.csv'\n",
-    "with open('Linear_Regression_'+OutputFile, 'r') as data:\n",
-    "    df = pd.read_csv(data)\n",
-    "    countDict = {}\n",
-    "    xdf = df.drop(columns=['context','frequency'])\n",
-    "    ydf = df.frequency\n",
-    "    for column in xdf:\n",
-    "        rValue, _ = scipy.stats.pearsonr(xdf[column], df.frequency)\n",
-    "        countDict[column] = rValue\n",
-    "    i = 0\n",
-    "    fivePrimeDict = {}\n",
-    "    threePrimeDict = {}\n",
-    "    for key, value in countDict.items():\n",
-    "        if i < 4:\n",
-    "            fivePrimeDict[key] = value\n",
-    "            i += 1\n",
-    "        else:\n",
-    "            threePrimeDict[key] = value\n",
-    "    threeDrop = (min(threePrimeDict, key = lambda dictionaryKey: abs(threePrimeDict.get(dictionaryKey))))\n",
-    "    fiveDrop = (min(fivePrimeDict, key = lambda dictionaryKey: abs(fivePrimeDict.get(dictionaryKey))))\n",
-    "    Adi = df.drop(columns=['context', 'frequency', 'threePrimeA', 'threePrimeT', 'threePrimeC', 'threePrimeG', str(fiveDrop)])\n",
-    "    Ezra = df.drop(columns=['context', 'frequency', 'fivePrimeA', 'fivePrimeT', 'fivePrimeC', 'fivePrimeG', str(threeDrop)])\n",
-    "    X2 = sm.add_constant(Adi)\n",
-    "    est = sm.OLS(ydf,X2).fit()\n",
-    "    print(est.summary())\n",
-    "    X3 = sm.add_constant(Ezra)\n",
-    "    est = sm.OLS(ydf,X3).fit()\n",
-    "    print(est.summary())"
+    "from CreateLinearRegressionFile import LinearFile\n",
+    "from PearsonR import RegressionAnalysis\n",
+    "LinearFile(OutputFile)\n",
+    "RegressionAnalysis(OutputFile)"
    ]
   }
  ],
